objects/Participant__c.object
<CustomObject>
    <description>Customers who participated in the course or training package.</description>
    <fields>
        <fullName>Account_GROUP__c</fullName>
        <formula>Contact__r.Account.Account_GROUP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_GROUP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Name of participant (may be different to job account name)</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Contact__r.Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attending_PNI__c</fullName>
        <inlineHelpText>Enter Yes or No, if attending PNI</inlineHelpText>
        <label>Attending PNI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAANZ_Trns_ID__c</fullName>
        <inlineHelpText>Transaction number for registrations from Chartered Accountants Australia and New Zealand</inlineHelpText>
        <label>CAANZ Trns ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAANZ_registration_date__c</fullName>
        <inlineHelpText>important in case there is a delay in registering into SF at end of month</inlineHelpText>
        <label>CAANZ registration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Studies__c</fullName>
        <formula>Job__r.Case_Studies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List of case studies used on the job</inlineHelpText>
        <label>Case Studies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Status__c</fullName>
        <label>Certificate Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awarded</fullName>
                    <default>true</default>
                    <label>Awarded</label>
                </value>
                <value>
                    <fullName>Withheld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_template__c</fullName>
        <formula>IF(
OR(
CONTAINS(Job__r.Opportunity_and_Job_sub_type__c,&quot;CDP-&quot;),
CONTAINS(Job__r.Opportunity_and_Job_sub_type__c,&quot;WLD Training&quot;)
),
&quot;a1G1r000002tnVk&quot;,
&quot;a1G1r000002tlGi&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certificate template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concessions_Deadlocks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>tick if pax has indicated interest on their public program evaluation</inlineHelpText>
        <label>Concessions/Deadlocks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <description>GE Myriad Minds 30/4/2010.</description>
        <formula>Contact__r.FirstName  &amp; &quot; &quot; &amp;  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full name of the contact.</inlineHelpText>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Negotium_email_opt_in__c</fullName>
        <formula>Contact__r.Negotium_Email_Opt_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Negotium email opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Negotium_subscribe_date__c</fullName>
        <formula>Contact__r.Negotium_Subscribe_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Negotium subscribe date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <formula>Contact__r.Record_Type_A__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Referral__c</fullName>
        <formula>Contact__r.Referrer__r.FirstName+
Contact__r.Referrer__r.LastName</formula>
        <label>Contact Referral</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_email_opt_out__c</fullName>
        <formula>Contact__r.HasOptedOutOfEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact email opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_subscription_email__c</fullName>
        <formula>Contact__r.Subscriptions_Email_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact subscription email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Survey_URL__c</fullName>
        <formula>Job__r.Evaluation_Survey_URL__c &amp; &quot;?pid=&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <inlineHelpText>Fee excludes GST</inlineHelpText>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_PERSON_ACCOUNT__c</fullName>
        <formula>IF ( Contact__r.IsPersonAccount =TRUE,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS PERSON ACCOUNT?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number2__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Invoice number for public program</inlineHelpText>
        <label>Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>zInvoice Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Account_Name__c</fullName>
        <formula>Job__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account name of the job (may not be  where the pax works)</inlineHelpText>
        <label>Job Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Currency__c</fullName>
        <formula>Job__r.Billing_Currency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Days__c</fullName>
        <formula>Job__r.Job_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_First_Date__c</fullName>
        <formula>Job__r.Job_First_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job First Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Last_Date_Integer__c</fullName>
        <formula>VALUE(
     TEXT(YEAR(Job__r.Job_Last_Date__c)) 
     &amp; IF (MONTH(Job__r.Job_Last_Date__c)&lt;10,&quot;0&quot;,&quot;&quot;)
     &amp; TEXT(MONTH(Job__r.Job_Last_Date__c)) 
     &amp; IF (DAY(Job__r.Job_Last_Date__c)&lt;10,&quot;0&quot;,&quot;&quot;)
     &amp; TEXT(DAY(Job__r.Job_Last_Date__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Last Date Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Last_Date__c</fullName>
        <formula>Job__r.Job_Last_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <formula>case(Job__r.Status__c, 
           &quot;Proposed&quot;, &quot;Proposed&quot;,
           &quot;Proposal Declined&quot;,&quot;Proposal Declined&quot;,
            &quot;Completed&quot;,&quot;Completed&quot;,
            &quot;Cancelled&quot;,&quot;Cancelled&quot;,
            &quot;Postponed&quot;,&quot;Postponed&quot;,
            &quot;Confirmed&quot;,&quot;Confirmed&quot;,
             &quot;ENS to Follow Up&quot;, &quot;ENS to Follow Up&quot;,
             &quot;Waiting for Client&quot;, &quot;Waiting for Client&quot;,
              &quot;Proposal Requested&quot;, &quot;Proposal Requested&quot;,
              &quot;Closed&quot;, &quot;Closed&quot;,
              &quot;Tentative&quot;, &quot;Tentative&quot;,
              &quot;Migrated&quot;, &quot;Migrated&quot;,
      &quot;ERROR&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Training_Type__c</fullName>
        <formula>CASE( Job__r.Training_Type__c , 
&quot;CDP&quot;,&quot;CDP&quot;,
&quot;ENS NWM&quot;,&quot;ENS NWM&quot;,
&quot;Event&quot;,&quot;Event&quot;,
&quot;Incompany&quot;,&quot;Incompany&quot;,
&quot;Incompany - by inhouse trainers&quot;,&quot;Incompany - by inhouse trainers&quot;,
&quot;Public&quot;,&quot;Public&quot;,
&quot;WLD&quot;,&quot;WLD&quot;,
&quot;error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Training Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <formula>case( Job__r.Job_Type__c ,
          &quot;Consulting&quot;, &quot;Consulting&quot;, 
          &quot;Training&quot;,&quot;Training&quot;, 
          &quot;Retainer&quot;,&quot;Retainer&quot;, 
           &quot;Coaching&quot;,&quot;Coaching&quot;, 
            &quot;ERROR&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <inlineHelpText>CAANZ Jurisdiction (area)</inlineHelpText>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Participants (Last Job)</relationshipLabel>
        <relationshipName>LastJob</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Job_Account_Name__c</fullName>
        <formula>LastJob__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Case_Studies__c</fullName>
        <formula>LastJob__r.Case_Studies__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Case Studies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Date__c</fullName>
        <formula>LastJob__r.Certificate_Date_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Job_Days__c</fullName>
        <formula>LastJob__r.Job_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Job Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Job_Job_Type__c</fullName>
        <formula>CASE( LastJob__r.Job_Type__c,
&quot;Coaching&quot;,&quot;Coaching&quot;,
&quot;Consulting&quot;,&quot;Consulting&quot;,
&quot;Retainer&quot;,&quot;Retainer&quot;,
&quot;Training&quot;,&quot;Training&quot;,
&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Materials__c</fullName>
        <formula>LastJob__r.Materials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Materials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Opportunity_job_sub_type__c</fullName>
        <formula>LastJob__r.Opportunity_and_Job_sub_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Opportunity job sub type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Opportunity_job_type__c</fullName>
        <formula>LastJob__r.Opportunity_and_job_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Opportunity job type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Opportunity_record_type__c</fullName>
        <formula>LastJob__r.Opportunity_record_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Opportunity record type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Presenter__c</fullName>
        <formula>LastJob__r.Presenters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Presenter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Program_Name__c</fullName>
        <formula>LastJob__r.Program_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Public_Program_Materials__c</fullName>
        <formula>CASE(LastJob__r.Public_Program_Materials__c,

&quot;zLevel 1 - Workbook set (4 cards and pen), Yellow Beetle, Red/Blue process observation sheet, Process observation sheet&quot;,
&quot;Level 1 - Workbook set (4 cards and pen), Yellow Beetle, Red/Blue process observation sheet, Process observation sheet&quot;,

&quot;zLevel 2 - Manual set (4 cards and pen), Harbourside/Munal, Process observation sheet, Crocodile eggs&quot;,
&quot;Level 2 - Manual set (4 cards and pen), Harbourside/Munal, Process observation sheet, Crocodile eggs&quot;,

&quot;Level 3 - Advanced Workbook set (4 cards and pen), Process observation sheet, 3 recommendations, Garden Block, Customer Reluctance, Sino Oil&quot;,
&quot;Level 3 - Advanced Workbook set (4 cards and pen), Process observation sheet, 3 recommendations, Garden Block, Customer Reluctance, Sino Oil&quot;,

&quot;Fundamentals – Handbook Set (Guide to Preparation/Tactics Card &amp; pen), Green Resources Case study, Style Flexibility Handout&quot;,
&quot;Fundamentals – Handbook Set (Guide to Preparation/Tactics Card &amp; pen), Green Resources Case study, Style Flexibility Handout&quot;,

&quot;Level 1 - Workbook set (4 cards and pen), Crocodile Eggs, Red/Blue process observation sheet, Process observation sheet&quot;,
&quot;Level 1 - Workbook set (4 cards and pen), Crocodile Eggs, Red/Blue process observation sheet, Process observation sheet&quot;,

&quot;Level 2 - Manual set (4 cards and pen), Harbourside/Munal, Garden Block, Process observation sheet&quot;,
&quot;Level 2 - Manual set (4 cards and pen), Harbourside/Munal, Garden Block, Process observation sheet&quot;,

&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Public Program Materials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Public_Program_Name__c</fullName>
        <formula>CASE( LastJob__r.Public_Program_Name__c,

&quot;Professional Negotiation - Level 1&quot;,&quot;Professional Negotiation - Level 1&quot;,

&quot;Strategic Negotiation - Level 2&quot;, &quot;Strategic Negotiation - Level 2&quot;,

&quot;Expert Negotiation - Level 3&quot;, &quot;Expert Negotiation - Level 3&quot;,

&quot;Developing Effective Negotiation Skills&quot;, &quot;Developing Effective Negotiation Skills&quot;,

&quot;Professional Negotiation and Influencing&quot;, &quot;Professional Negotiation and Influencing&quot;,

&quot;Advanced Negotiation and Influencing&quot;,&quot;Advanced Negotiation and Influencing&quot;,

&quot;Verhandlungsführung mit System: Grenzen explorieren, Neues ausprobieren&quot;,&quot;Verhandlungsführung mit System: Grenzen explorieren, Neues ausprobieren&quot;,

&quot;Dynamics of Negotiation and Influencing&quot;,&quot;Dynamics of Negotiation and Influencing&quot;,

&quot;Dynamics of Negotiation and Influencing:Feedback &amp; Finetuning&quot;,&quot;Dynamics of Negotiation and Influencing:Feedback &amp; Finetuning&quot;,

&quot;Negotiating and Influencing Skills&quot;,&quot;Negotiating and Influencing Skills&quot;,

&quot;Advanced Negotiator&quot;,&quot;Advanced Negotiator&quot;,

&quot;Negotiation Fundamentals&quot;,&quot;Negotiation Fundamentals&quot;,

&quot;Negotiation Preparation&quot;,&quot;Negotiation Preparation&quot;,

&quot;Negotiation Tactics&quot;,&quot;Negotiation Tactics&quot;,

&quot;Concessions &amp; Deadlocks&quot;,&quot;Concessions &amp; Deadlocks&quot;,

&quot;Stakeholder Engagement&quot;,&quot;Stakeholder Engagement&quot;,

&quot;Professional &amp; Strategic Negotiation&quot;,&quot;Professional &amp; Strategic Negotiation&quot;,

&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Public Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Status__c</fullName>
        <formula>CASE( LastJob__r.Status__c ,
&quot;ENS to Follow Up&quot;,&quot;ENS to Follow Up&quot;,
&quot;Waiting for Client&quot;,&quot;Waiting for Client&quot;,
&quot;Proposal Requested&quot;,&quot;Proposal Requested&quot;,
&quot;Proposed&quot;,&quot;Proposed&quot;,
&quot;Confirmed&quot;,&quot;Confirmed&quot;,
&quot;Postponed&quot;,&quot;Postponed&quot;,
&quot;Cancelled&quot;,&quot;Cancelled&quot;,
&quot;Completed&quot;,&quot;Completed&quot;,
&quot;Closed&quot;,&quot;Closed&quot;,
&quot;Tentative&quot;,&quot;Tentative&quot;,
&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Training_Type__c</fullName>
        <formula>CASE( LastJob__r.Training_Type__c,
&quot;CDP&quot;,&quot;CDP&quot;,
&quot;ENS NWM&quot;,&quot;ENS NWM&quot;,
&quot;Event&quot;,&quot;Event&quot;,
&quot;Incompany&quot;,&quot;Incompany&quot;,
&quot;Incompany - by inhouse trainers&quot;,&quot;Incompany - by inhouse trainers&quot;,
&quot;Public&quot;,&quot;Public&quot;,
&quot;WLD&quot;,&quot;WLD&quot;,
&quot;null&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Job Training Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_segment_touch__c</fullName>
        <label>List segment touch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_segmentation_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For list segmentation mass update only</description>
        <label>List segmentation updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketer__c</fullName>
        <inlineHelpText>Enter initials of the marketer (who gets commission on pax)</inlineHelpText>
        <label>Marketer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_testimonial__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>tick if pax has indicated Yes we can use their final comment as a testimonial on their public program evaluation</inlineHelpText>
        <label>Marketing testimonial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIP_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box is ticked if NIP is completed</inlineHelpText>
        <label>NIP Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIP_Sent__c</fullName>
        <label>NIP Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NIP_Survey_URL__c</fullName>
        <formula>Job__r.NIP_Survey_URL__c &amp; &quot;?accessid=&quot; &amp; NIP_Survey_access_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NIP Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIP_Survey_access_ID__c</fullName>
        <inlineHelpText>The access ID this participant requires to gain access to the NIP Survey</inlineHelpText>
        <label>NIP Survey access ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiation_Tactics__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>tick if pax has indicated interest on their public program evaluation</inlineHelpText>
        <label>Negotiation Tactics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OC_PAX_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OC PAX Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Participant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Job_ID__c</fullName>
        <label>Old Job ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_Acct_Contact_ID__c</fullName>
        <description>Migration field</description>
        <externalId>true</externalId>
        <label>Old Person Acct Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_ID__c</fullName>
        <label>Old Person ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_Name__c</fullName>
        <label>Old Person Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFQ_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box is ticked if PFQ is completed</inlineHelpText>
        <label>PFQ Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFQ_Sent__c</fullName>
        <label>PFQ Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFQ_Survey_URL__c</fullName>
        <formula>Job__r.PFQ_Survey_URL__c &amp; &quot;&amp;pid=&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PFQ Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Sell__c</fullName>
        <description>To identify if marketer is eligible for Sell commission on participant registration fee</description>
        <inlineHelpText>To identify if marketer is eligible for Sell commission on participant registration fee</inlineHelpText>
        <label>PP Sell</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>n</fullName>
                    <default>true</default>
                    <label>n</label>
                </value>
                <value>
                    <fullName>y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PP_Spot__c</fullName>
        <description>To identify if marketer is eligible for Spot commission on participant registration fee</description>
        <inlineHelpText>To identify if marketer is eligible for Spot commission on participant registration fee</inlineHelpText>
        <label>PP Spot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>y</fullName>
                    <default>true</default>
                    <label>y</label>
                </value>
                <value>
                    <fullName>n</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant_18_ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Number_Lookup__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant_Number_Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pax_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pax First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pax_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pax Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <inlineHelpText>Date payment was received for public programs</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_received__c</fullName>
        <inlineHelpText>Network Member includes ENSI Staff</inlineHelpText>
        <label>Payment received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Client Trial</fullName>
                </value>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>Network Member</fullName>
                </value>
                <value>
                    <fullName>FOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_RAIT_Survey_URL__c</fullName>
        <formula>Job__r.Post_RAIT_Survey_URL__c &amp; &quot;&amp;pid=&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post RAIT Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_RAIT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box is ticked if Post RAIT is completed</inlineHelpText>
        <label>Post RAIT Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_RAIT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Box is ticked if RAIT is completed</inlineHelpText>
        <label>Pre RAIT Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presenters__c</fullName>
        <formula>Job__r.Presenters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Presenters name inserted from job</inlineHelpText>
        <label>Presenters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <inlineHelpText>Used for Open Course promo codes</inlineHelpText>
        <label>Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>